fixed content alignment to center on y-axis

--- a/src/sass/component/_dashboard.scss
+++ b/src/sass/component/_dashboard.scss
@@ -166,10 +166,15 @@
   margin-top: 25px;
   margin-left: 20px;
   margin-right: 15px;
+  @include mobile{
+    align-items: center;
+
+  }
   @include desktop {
     margin-top: 20px;
     margin-left: 25px;
     flex-direction: column;
+
   }
 
   .current {
